Finish displaying data, make app responsive, add input to chose amount of cards, add animation when loading

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <p id="container"></p>
-    <script src="/scripts/index.js"></script>
+    <div class="form-container">
+      <form id="form">
+        <label for="cards-qty" class="form-input"
+          >Choose how many cards to display!
+        </label>
+        <div class="form-sub-container">
+          <input type="number" id="cards-qty" name="cards-qty" required />
+          <button type="button" id="btn">Submit</button>
+        </div>
+      </form>
+      <p id="container"></p>
+    </div>
+    <script defer src="/scripts/index.js"></script>
   </body>
 </html>
